--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,41 @@
+html {
+  background-color: #c9b5ab;
+  font-family: "PT Serif", serif;
+  font-weight: normal;
+  line-height: 1.5;
+}
+
+h1 {
+  color: #222;
+  font-family: "PT sans";
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+
+nav {
+  font-family: "PT sans";
+  font-weight: bolder;
+  font-size: 1.125rem;
+
+}
+
+nav ol {
+  list-style-type: none;
+}
+
+/*nav a {
+  I want to remove the underline
+}*/
+
+img {
+  width: 508px;
+}
+
+figcaption {
+  font-style: italic;
+  text-align: center;
+}
 /*  Typefaces: PT Sans, PT Serif (from Google Fonts)
     Text sizes: 1.5rem, 1.125rem, 0.8rem
     Line height: 1.5
     Colours: #c9b5ab, #8f2440, #222, #3f1622, #3f1622*/
-
-html{
-  background-color: #c9b5ab;
-  ffont-family: 'PT Sans', sans-serif;
-  font-family: 'PT Serif', serif;
-}
