--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@ html {
 
 h1, h2 {
   color: #3f1622;
-  font-family: "PT sans";
+  font-family: "PT Sans", sans-serif;
   font-weight: bolder;
   font-size: 1.5rem;
 }
 
 nav {
-  font-family: "PT sans";
+  font-family: "PT Sans", sans-serif;
   font-weight: bolder;
   font-size: 1.125rem;
 
@@ -77,7 +77,3 @@ ul {
 small {
   font-size: 0.8rem;
 }
-/*  Typefaces: PT Sans, PT Serif (from Google Fonts)
-    Text sizes: 1.5rem, 1.125rem, 0.8rem
-    Line height: 1.5
-    Colours: #c9b5ab, #8f2440, #222, #3f1622, #3f1622*/
